--- a/src/components/Common/Card.css
+++ b/src/components/Common/Card.css
@@ -1,7 +1,7 @@
 .card {
   border: 1px solid #1e2136;
   border-radius: 0.4rem;
-  background: #16182e;
+  background: #37036d;
 }
 
 .card-header {
@@ -18,7 +18,7 @@
 
 .card-divider {
   height: 1px;
-  background: #23263b;
+  background: #37036d;
 }
 .card-body {
   padding: 1.5rem;
