--- a/src/components/Exchange/ExchangeBanner.css
+++ b/src/components/Exchange/ExchangeBanner.css
@@ -1,5 +1,5 @@
 .ExchangeBanner {
-  background: linear-gradient(90deg, #105461, #28156e);
+  background-color: black;
   border-radius: 0.5rem;
   margin: 3rem 3.1rem 1.5rem;
   padding: 1.2rem 2.4rem;
