--- a/src/components/AddressDropdown/AddressDropdown.css
+++ b/src/components/AddressDropdown/AddressDropdown.css
@@ -14,7 +14,7 @@
 }
 
 .App-header-user-address:hover {
-  background: #808aff14;
+  background: #37036d;
 }
 
 .menu-items {
@@ -25,7 +25,7 @@
   width: 100%;
   transform-origin: top right;
   border-radius: 0.4rem;
-  background: #16182e;
+  background: #37036d;
   border: 1px solid #32344c;
   list-style: none;
   cursor: pointer;
@@ -43,10 +43,10 @@
   border-radius: 0.4rem;
 }
 .menu-item:hover {
-  background: #808aff14 !important;
+  background: #37036d !important;
   border-radius: 0.4rem;
   opacity: 1;
-  color: #eee;
+  color: white;
 }
 .menu-item > p {
   margin: 0px;
