--- a/src/components/Exchange/PositionDropdown.css
+++ b/src/components/Exchange/PositionDropdown.css
@@ -1,7 +1,7 @@
 .PositionDropdown-dots-icon {
   font-size: 1rem;
   border: none;
-  color: rgba(255, 255, 255, 0.7);
+  color: white;
   display: inline-flex;
   align-items: center;
   margin-top: 0.3rem;
@@ -11,7 +11,7 @@
 }
 
 .PositionDropdown-dots-icon:hover {
-  color: rgba(255, 255, 255, 1);
+  color: white;;
   background: rgba(255, 255, 255, 0.1);
 }
 
