--- a/src/components/ExternalLink/ExternalLink.scss
+++ b/src/components/ExternalLink/ExternalLink.scss
@@ -2,7 +2,7 @@
   text-decoration: underline;
   cursor: pointer;
   display: inline-flex;
-  color: rgba(255, 255, 255, 0.7);
+  color: white;
   &:hover {
     color: rgba(255, 255, 255);
   }
