--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -25,7 +25,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #37036d;
 }
 
 .Modal-content {
@@ -34,7 +34,7 @@
   max-width: 100%;
   max-height: 90vh;
   overflow: auto;
-  background: #16182e;
+  background: #37036d;
   border-radius: 4px;
 }
 
