--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -13,7 +13,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: #37036d;
   backdrop-filter: blur(1rem);
 }
 
@@ -23,7 +23,7 @@
   padding: 1.25rem;
   display: grid;
   grid-template-columns: auto auto;
-  background: linear-gradient(90deg, rgba(12, 9, 78, 1) 0%, rgba(45, 8, 84, 1) 100%);
+  background-color: #5d39a9;
   border-bottom: 1px solid #1f053b;
 }
 
@@ -34,7 +34,7 @@
 .Overlay-content-outer {
   position: relative;
   z-index: 20;
-  background: linear-gradient(45deg, rgba(7, 5, 57, 1) 0%, rgba(34, 3, 66, 1) 100%);
+  background: #37036d;
 }
 
 .Overlay-close-button {
