--- a/src/components/Tab/Tab.css
+++ b/src/components/Tab/Tab.css
@@ -4,8 +4,8 @@
   font-size: var(--font-sm);
   border-radius: 3px;
   overflow: hidden;
-  color: rgba(255, 255, 255, 0.7);
-  background: linear-gradient(90deg, rgba(30, 34, 61, 0.9) 0%, rgba(38, 43, 71, 0.9) 100%);
+  color: white;
+  background: #37036d;
   box-shadow: inset 0px 0px 30px 5px rgba(255, 255, 255, 0.01);
 }
 
@@ -23,15 +23,15 @@
 }
 
 .Tab.block .Tab-option:hover {
-  color: rgba(255, 255, 255, 1);
-  background: linear-gradient(90deg, rgba(35, 57, 172, 1) 0%, rgba(43, 59, 147, 1) 100%);
+  color: white;;
+  background: #37036d;
 }
 
 .Tab.block .Tab-option.active {
   opacity: 1;
   pointer-events: none;
-  background: linear-gradient(90deg, rgba(45, 66, 252, 1) 0%, rgba(46, 61, 205, 1) 100%);
-  color: rgba(255, 255, 255, 1);
+  background: #37036d;
+  color: white;;
 }
 
 .Tab.block .Tab-option.active .Tab-option-icon {
