--- a/src/pages/ClaimEsGmx/ClaimEsGmx.css
+++ b/src/pages/ClaimEsGmx/ClaimEsGmx.css
@@ -90,10 +90,10 @@
   border-radius: 3px;
   z-index: 1;
   cursor: pointer;
-  color: rgba(255, 255, 255, 0.7);
+  color: white;
 }
 
 .ClaimEsGmx-max-button:hover {
-  color: rgba(255, 255, 255, 1);
+  color: white;;
   background: linear-gradient(90deg, rgba(58, 78, 252, 1) 0%, rgba(51, 68, 222, 1) 100%);
 }
