--- a/src/pages/Dashboard/DashboardV2.css
+++ b/src/pages/Dashboard/DashboardV2.css
@@ -16,7 +16,7 @@
 .token-table-wrapper {
   border: 1px solid #1e2136;
   border-radius: 0.4rem;
-  background: #17182c;
+  background: #37036d;
   padding: 0 1.5rem;
   text-align: left;
 }
@@ -73,7 +73,7 @@
   letter-spacing: 0.4px;
   text-align: left;
   z-index: 1;
-  background: linear-gradient(90deg, #0b0b0f 0%, rgba(10, 13, 28, 1) 100%);
+  background: #37036d;
   cursor: pointer;
 }
 
