--- a/src/pages/Referrals/Referrals.css
+++ b/src/pages/Referrals/Referrals.css
@@ -20,7 +20,7 @@
   padding: 2.4rem;
   border-radius: 1.3rem;
   max-width: 59.2rem;
-  background: #16182e;
+  background: #37036d;
   box-shadow: 0px 0.5rem 1.3rem #00000085;
   border: 1px solid #2a2b3d;
   border-radius: 0.4rem;
@@ -170,7 +170,7 @@
 }
 
 .info-card {
-  background: var(--dark-blue-bg);
+  background: #37036d;
   border: 1px solid #1e2136;
   border-radius: 0.4rem;
   display: flex;
@@ -269,7 +269,7 @@
   padding: 1.5rem;
   border: 1px solid #1e2136;
   border-radius: 0.4rem;
-  background: #16182e;
+  background: #37036d;
   font-size: var(--font-base);
 }
 .confirm-checkbox .Checkbox {
