--- a/src/styles/Shared.css
+++ b/src/styles/Shared.css
@@ -7,7 +7,7 @@ body,
   padding: 0;
   color: white;
   font-size: 10px;
-  background-color: #101124;
+  background-color: black;
 }
 
 body {
@@ -35,14 +35,14 @@ input {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #1c1c1c;
+  background: black;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #383838;
+  background: black;
   border-radius: 1.5rem;
-  border: 1px solid #212121;
+  border: black;
 }
 
 /* Handle on hover */
@@ -51,12 +51,12 @@ input {
 }
 
 :root {
-  --dark-blue: #17182c;
-  --dark-blue-bg: #16182e;
-  --dark-blue-accent: #a0a3c4;
-  --dark-blue-hover: #808aff14;
-  --dark-blue-border: #ffffff29;
-  --dark-blue-active: #818cef33;
+  --dark-blue: #37036d;
+  --dark-blue-bg: #37036d;
+  --dark-blue-accent: #37036d;
+  --dark-blue-hover: #37036d;
+  --dark-blue-border: #37036d;
+  --dark-blue-active: #37036d;
   --avax-red: #e84143;
   --arbitrum-blue: #28a0f0;
   --border-radius-sm: 0.4rem;
@@ -109,6 +109,7 @@ button.App-cta:disabled {
   cursor: not-allowed;
   opacity: 0.9;
   box-shadow: none;
+  background-color: #5d39a9;
 }
 
 table {
@@ -128,7 +129,7 @@ td {
 }
 
 .border {
-  border: 1px solid rgba(163, 165, 196, 0.2);
+  border: 1px solid #37036d;
 }
 
 .align-right {
@@ -175,12 +176,12 @@ td {
 }
 
 .text-white {
-  color: white;
+  color: #47abea;
 }
 
 .label,
 .label a {
-  color: rgba(255, 255, 255, 0.7);
+  color: #47abea;
 }
 
 ul {
@@ -201,7 +202,7 @@ a.plain {
 }
 
 .default-btn {
-  background: #2d42fc;
+  background: #5d39a9;
   border-radius: 4px;
   font-size: var(--font-sm);
   line-height: 2rem;
@@ -224,7 +225,7 @@ a.plain {
 }
 
 .default-btn:hover {
-  background: #4f60fc;
+  background: #37036d;
 }
 
 /* .default-btn:focus {
@@ -236,7 +237,7 @@ a.plain {
 } */
 
 .default-btn:active {
-  background: #5f6ffd;
+  background: #37036d;
   border: none;
   padding-left: 1.6rem;
   padding-right: 1.6rem;
@@ -271,7 +272,7 @@ a.plain {
 }
 
 .secondary-btn {
-  background: #03d1cf;
+  background: #5d39a9;
   border-radius: 4px;
   font-size: var(--font-sm);
   line-height: 2rem;
@@ -418,4 +419,8 @@ button.btn-link:hover .logout-icon {
 }
 .default-cursor.App-cta {
   cursor: default;
+}
+
+.App-cta{
+  background-color: #5d39a9;
 }
